vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: votelabel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: votelabel
  template:
    metadata:
      labels:
        app: votelabel
    spec:
      containers:
      - name: vote
        image: simplonasa/azure_voting_app:TAG
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
