votecanary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votecanary
  labels:
    app: votecanarylabel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votecanarylabel
  template:
    metadata:
      labels:
        app: votecanarylabel
    spec:
      containers:
      - name: votecanary
        image: celiaoued/vote-app:TAGC
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
