serviceVote.yaml
apiVersion: v1
kind: Service
metadata:
  name: votecluster
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: votelabel
