serviceVotecanary.yaml
apiVersion: v1
kind: Service
metadata:
  name: votecanarycluster
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: votecanarylabel
